css/main.css
body{
  background-color: #FFFFD1;
}

button{
  float: right;
}

#outerDiv{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #AFF8DB;
  padding: 50px;
  border-radius: 5%;
}

.addBtn{
  text-decoration: none;
  background-color: #6bf9df;
  color: #333333;
  padding: 2px 6px 2px 6px;
  border-top: 1px solid #CCCCCC;
  border-right: 1px solid #333333;
  border-bottom: 1px solid #333333;
  border-left: 1px solid #CCCCCC;
  border-radius: 8px;
}

.addBtn:hover{
  background-color: #46a594;
}

.entyList{
  display: block;
  margin: 10px;
  font-size: 20px;
}

.checked{
  text-decoration: line-through;
  background-color: #39ff14;
  padding: 5px;
  border-radius: 5px;
}

.buttonClick{
  color: #20bf6b !important;
  background: #ffffff;
  border: 4px solid #20bf6b !important;
  border-radius: 6px;
  display: inline-block;
  transition: all 0.3s ease 0s;
  margin: 5px;
}

buttonClick:hover {
  color: #494949 !important;
  border-radius: 10px;
  border-color: #494949 !important;
  transition: all 0.3s ease 0s;
}

